app/assets/stylesheets/main.css
/* ... */
p.info_new_blue {
    text-align:center;
    font-family:helvetica,sans-serif;
    color:#003366;
    font-size:16pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
/*
        Tabs
*/
#bottom_ribbon {
    margin:0 0 0 -21px;
    z-index:-200;
    top:842px;
    width:996px;
    height:57px;
    position:absolute;
    background:url("../images/bottom-ribbon.png") no-repeat;
}
#tab_ribbon {
    width:956px;
    height:50px;
    position:absolute;
    overflow:hidden;
}
.ribbon_left {
    float:left;
    width:8px;
    height:8px;
}
.ribbon_fill {
    background:url("../images/tab.png");
    width:8px;
    height:40px;
}
.ribbon_left .ribbon_triangle {
    background:url("../images/tab-ribbon-effect-left.png") no-repeat;
}
.ribbon_right .ribbon_triangle {
    background:url("../images/tab-ribbon-effect-right.png") no-repeat;
}
.ribbon_right {
    float:right;
    width:8px;
    height:8px;
}
.ribbon_triangle {
    width:8px;
    height:8px;
}
.tab_border {
    border-left: 1px solid #000;
    border-right: 1px solid #000;
    height:40px;
}
ul.tabs {
    margin-left: 7px;
    position:absolute;
    display:block;
    list-style: none;
    height: 50px; /*--Set height of tabs--*/
    width:950px;
    z-index:90000;
}
ul.tabs li {
    width:314px;
    text-align:center;
    float:left;
    margin:0 0 0 0;
    padding:0 0 0 0;
    height: 70px; /*--Subtract 1px from the height of the unordered list--*/
    line-height: 40px; /*--Vertically aligns the text within the tab--*/
    margin-bottom: -1px; /*--Pull the list item down 1px--*/
    overflow: hidden;
    position: relative;
    background: #003366;
    background: url("../images/tab.png") repeat-x;
}
ul.tabs li a {
    text-decoration: none;
    color: #448db2;
    display: block;
    font-size: 1.4em;
    padding: 0 20px;
    outline: none;
    text-shadow: 1px 1px 0px #000;
}
ul.tabs li.active {
    background:url("../images/tab-active.png") no-repeat bottom center;
}
ul.tabs li a:hover {
    background:transparent;
}
html ul.tabs li.active a, html ul.tabs li.active a:hover  { /*--Makes sure that the active tab does not listen to the hover properties--*/
    color:#fff;
}
.tab_container {
    overflow: hidden;
    clear: both;
    float: left; width: 100%;
    background:transparent;
}
.tab_content {
    height:535px;
    padding:0 0 0 0;
    font-size: 1.2em;
}
/*
	Slideshow
*/

#slides {
    top:15px;
    left:4px;
    z-index:100;
}

/*
	Slides container
	Important:
	Set the width of your slides container
	Set to display none, prevents content flash
*/

.slide_holder {
    width:960px;
    height:360px;
}
.slides_container {
    width:955px;
    overflow:hidden;
    position:relative;
    display:none;
}

/*
	Each slide
	Important:
	Set the width of your slides
	If height not specified height will be set by the slide content
	Set to display block
*/

.slides_container a {
    width:960px;
    height:360px;

}

.slides_container a img {
    display:block;
}

/*
	Next/prev buttons
*/
#arrow_holder {
    width:332px;
    height:20px;
    margin:0 auto;
}
.next {
    float:right;
    width:25px;
    height:20px;
    display:inline;
    z-index:101;
}

.prev {

    width:25px;
    height:20px;
    display:inline;
    z-index:101;
}

/*
	Pagination
*/

.pagination {
    padding:0 0 0 0;
    margin:-17px auto 0;
    width:250px;
}

.pagination li {
    float:left;
    margin:0 10px;
    list-style:none;
}

.pagination li a {
    display:block;
    width:21px;
    height:0;
    padding-top:21px;
    background-image:url("../images/pagination.png");
    background-position:0 0;
    float:left;
    overflow:hidden;
}

.pagination li.current a {
    background-position:0 -21px;
}
/*Screenshots slideshow*/
#slideshow {
    position:relative;
    height:250px;
}

#slideshow IMG {
    border-radius: 10px;
    moz-border-radius: 10px;
    webkit-border-radius: 10px;
    position:absolute;
    width:938px;
    height:455px;
    top:44px;
    left:9px;
    z-index:8;
}

#slideshow IMG.active {
    z-index:10;
}

#slideshow IMG.last-active {
    z-index:9;
}
/*Submit page*/
.new_form {
    border:none;
    font-family:helvetica,sans-serif;
    font-size:13pt;
    background:transparent;
}
textarea {
    resize:none;
}
.r {
    float:right;
}
.l {
    float:left;
}
.drop {
    background:#efd58c;
}
.styled-select select {
    -webkit-appearance: none;
    border:none;
    font-family:helvetica,sans-serif;
    background:url("../images/drop-down.png") no-repeat;
    width: 200px;
    padding-left:10px;
    height: 33px;
    color:#4c2d00;
    position:absolute;
}
.styled-select {
    -webkit-appearance: none;
    width:178px;
    height:33px;
    border:none;
    overflow: hidden;
    background: url("../images/drop-down-button.png") no-repeat right;
    position:relative;
}
.new_radio {
    height:74px;
    padding-top:50px;
}
#new_author {
    padding:40px 0 0 0;
    width:400px;
    height:160px;
    margin:0 auto;
}
.git_img {
    margin:4px 20px 0 0;
    width:67px;
    height:67px;
}
.new_title {
    margin-right:12px;
    padding-right:10px;
    padding-left:10px;
    width:207px;
    height:35px;
    background:url("../images/tfield-title.png") no-repeat;
}
.new_tagline {
    padding-right:10px;
    padding-left:10px;
    width:289px;
    height:35px;
    background:url("../images/tfield-tagline.png") no-repeat;
}
.new_description {
    margin-top:12px;
    padding-right:10px;
    padding-left:10px;
    width:528px;
    height:115px;
    background:url("../images/tfield-description.png") no-repeat;
}
.new_info {
    margin-top:10px;
    margin-bottom:10px;
    padding-right:10px;
    padding-left:10px;
    width:370px;
    height:35px;
    background:url("../images/tfield-info.png") no-repeat;
}
.thumbnail {
    visibility:hidden;
}

